Archive2/4c/6160668c1110b2/output
In file included from /usr/local/include/c++/4.9.0/mutex:42:0,
                 from /usr/local/include/c++/4.9.0/condition_variable:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/functional: In instantiation of 'struct std::_Bind_simple<void (*())(int)>':
/usr/local/include/c++/4.9.0/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(int); _Args = {}]'
main.cpp:39:23:   required from here
/usr/local/include/c++/4.9.0/functional:1665:61: error: no type named 'type' in 'class std::result_of<void (*())(int)>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/local/include/c++/4.9.0/functional:1695:9: error: no type named 'type' in 'class std::result_of<void (*())(int)>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
